--- a/src/app/pages/product/components/add-product/add-product.component.html
+++ b/src/app/pages/product/components/add-product/add-product.component.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="row my-3">
-                    <div class="col-12 mt-3 d-flex justify-content-center">
+                    <div class="col-12 d-flex justify-content-center">
                         <button type="submit" [disabled]="form.invalid" class="add-btn Tajawal-Medium fs-20">إضافة منتج</button>
                     </div>
                 </div>
