--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -34,6 +34,16 @@ a{
     background-position: bottom;
 }
 
+.page-container .screen-center{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: max-content;
+}
+
 
 .login-container{
     width: 680px;
@@ -149,7 +159,7 @@ button{
     .login-container {
         width: 500px;
         max-width: 100%;
-        height: 470px;
+        height: 515px;
         padding: 20px 40px;
     }
 
