--- a/src/app/pages/product/components/add-product/add-product.component.css
+++ b/src/app/pages/product/components/add-product/add-product.component.css
@@ -21,7 +21,7 @@
 
 .image-container img  {
     width: 205px;
-    height: 107px;
+    height: 90px;
     border-radius: 11px;
 }
 
@@ -34,6 +34,7 @@
     background-color: #F7F7F7 ;
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 8px;
+    border-color:#F7F7F7 !important;
 }
 
 ::ng-deep .p-dropdown .p-dropdown-items{
