--- a/src/app/pages/category/components/subcategory/subcategory.component.html
+++ b/src/app/pages/category/components/subcategory/subcategory.component.html
@@ -26,7 +26,7 @@
 <div *ngIf="!allsubCategoryList?.length" class="row mt-50">
     <div class="col-12 text-center">
         <div>
-            <i style="font-size: 100px; color: #E0E0E0;" class="pi pi-fw pi-sitemap"></i>
+            <i style="font-size: 100px; color: #E0E0E0;" class="pi pi-info-circle my-4"></i>
         </div>
         <p class="Tajawal-Bold fs-28 my-2">لا يوجد لديك تصنيف فرعي حالياً</p>
     </div>
