--- a/src/app/pages/product/components/view-products/view-products.component.css
+++ b/src/app/pages/product/components/view-products/view-products.component.css
@@ -1,6 +1,6 @@
 .boxesProduct-container{
     width: 100%;
-    height: 177px;
+    height: 100%;
     background: #F7F7F7 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #272D3B33;
     border-radius: 20px;
