--- a/src/app/pages/product/components/view-products/view-products.component.html
+++ b/src/app/pages/product/components/view-products/view-products.component.html
@@ -1,7 +1,8 @@
-<!-- Boxes View -->
+<div class="view-products h-100">
+    <!-- Boxes View -->
 <div *ngIf="styleView == 'boxesView' && allProductList?.length">
-    <div class="row my-3">
-        <div class="col-sm-12 col-md-6 col-lg-2 px-2 my-2" *ngFor="let item of allProductList | paginate:{
+    <div class="row my-2">
+        <div class="col-sm-12 col-md-6 col-lg-2 px-2 mt-3" *ngFor="let item of allProductList | paginate:{
             itemsPerPage : 18,
             currentPage : page,
             totalItems : allProductList?.length
@@ -13,8 +14,10 @@
         </div>
     </div>
 
-    <div>
+    <div class="mt-3">
         <pagination-controls 
+            [autoHide]="allProductList.length > 18 ? false : true"
+            [responsive]="true"
              nextLabel = ">"
             previousLabel ="<"
             (pageChange)="page = $event">
@@ -25,8 +28,8 @@
 
 <!-- Rows View -->
 <div *ngIf="styleView == 'rowsView' && allProductList?.length">
-    <div class="row my-3">
-        <div class="col-sm-12 col-md-12 col-lg-6 px-2 my-2" *ngFor="let item of allProductList | paginate:{
+    <div class="row my-2">
+        <div class="col-sm-12 col-md-12 col-lg-6 px-4 mt-3" *ngFor="let item of allProductList | paginate:{
             itemsPerPage : 12,
             currentPage : page,
             totalItems : allProductList?.length
@@ -43,8 +46,9 @@
         </div>
     </div>
 
-    <div>
+    <div class="mt-3">
         <pagination-controls 
+             [autoHide]="allProductList.length > 12 ? false : true"
             [responsive]="true"
              nextLabel = ">"
             previousLabel ="<"
@@ -53,13 +57,15 @@
     </div>
 </div>
 <!-- End Rows View -->
+</div>
 
 
 
 <div *ngIf="!allProductList?.length" class="row mt-50">
     <div class="col-12 text-center mt-50">
         <div>
-            <i style="font-size: 100px; color: #E0E0E0;" class="pi pi-fw pi-sitemap"></i>
+            <!-- <i style="font-size: 100px; color: #E0E0E0;" class="pi pi-fw pi-sitemap"></i> -->
+            <img class="my-4" src="assets/boxes.png" alt="boxs">
         </div>
         <p class="Tajawal-Bold fs-28 my-2">لا يوجد لديك منتجات حالياً</p>
     </div>
