--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ General
 body, html {
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 a {
@@ -96,7 +97,7 @@ End Fonts
 Margins
 ************************************************/
 .mt-50 {
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 /************************************************
@@ -185,11 +186,11 @@ Paginations
 .ngx-pagination {
     position: absolute !important;
     left: 0 !important;
-    bottom: 5px !important;
+    bottom: 7px !important;
     width: max-content !important;
     height: 28px !important;
     border: 1px solid black !important;
-    margin: 0 25px !important;
+    margin: 0 30px !important;
     border-radius: 20px !important;
     padding: 0 10px;
     display: flex;
