--- a/src/app/pages/category/category.component.css
+++ b/src/app/pages/category/category.component.css
@@ -41,7 +41,7 @@ border-radius: 50%;
 }
 
 .addCategory-btn{
-    width: 190px;
+    width: 100%;
     height: 80px;
     background: #2A2A2C;
     color: white;
