--- a/src/styles.css
+++ b/src/styles.css
@@ -88,6 +88,9 @@ Fonts
 .fs-25 {
     font-size: 25px;
 }
+.fs-16 {
+    font-size: 16px;
+}
 
 /************************************************
 End Fonts
