--- a/src/app/pages/locations/locations.component.css
+++ b/src/app/pages/locations/locations.component.css
@@ -13,8 +13,7 @@
 }
 
 .location-container{
-    min-width: 100%;
-    width: max-content;
+    width: 100%;
     background: #F7F7F7;
     box-shadow: 0px 3px 6px #D6D6D6;
     border-radius: 8px;
