--- a/src/app/pages/locations/locations.component.html
+++ b/src/app/pages/locations/locations.component.html
@@ -13,8 +13,8 @@
 </div>
 
 <div class="row my-2">
-    <div class="col-sm-12 col-md-6 col-lg-2 my-2 h-100" *ngFor="let item of allLocation | paginate:{
-        itemsPerPage : 10,
+    <div class="col-sm-12 col-md-6 col-lg-3 px-3 my-2 h-100" *ngFor="let item of allLocation | paginate:{
+        itemsPerPage : 8,
         currentPage : page,
         totalItems : allLocation?.length
     }; let i = index ">
@@ -25,7 +25,7 @@
             <div class="p-20">
                 <div class="location-title fs-20 Tajawal-Bold">{{item.project_name}}</div>
                 <div class="location-link">
-                    <a class="my-3 fs-20 Tajawal-Medium blue-txt-color" href="#" target="_blank">{{item.google_maps_link}}</a>
+                    <a [href]="item.google_maps_link" target="_blank" class="my-3 fs-20 Tajawal-Medium blue-txt-color" href="#" target="_blank">Google Map</a>
                 </div>
                 <div class="location-details my-4 d-flex justify-content-between">
                     <div class="owner">
@@ -44,7 +44,7 @@
         </div>
     </div>
     <pagination-controls 
-    [autoHide]="allLocation.length > 10 ? false : true"
+    [autoHide]="allLocation.length > 8 ? false : true"
    [responsive]="true"
     nextLabel = ">"
    previousLabel ="<"
